font improvements, popup animation fix on Safari

--- a/res/styles/fonts.css
+++ b/res/styles/fonts.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,500&subset=cyrillic');
-@import url('https://fonts.googleapis.com/css?family=Product+Sans:300,400,400italic');
+@import url('https://fonts.googleapis.com/css?family=Product+Sans:300,400,400italic&subset=cyrillic');
 
 @font-face {
   font-family: 'Material Icons Round';
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: local('Material Icons Round'),
     local('MaterialIcons-Regular'),
     url(../icons/round/font.ttf) format('truetype');
