--- a/res/styles/general.css
+++ b/res/styles/general.css
@@ -62,6 +62,11 @@ body {
     user-select: text;
 }
 
+[contenteditable] {
+    -webkit-user-select: text;
+    user-select: text;
+}
+
 md-icon {
     font-family: 'Material Icons Round';
     font-weight: normal;
